@@ -25,6 +25,7 @@
 #include "viewstack.h"
 #include "detailedlistview.h"
 #include "entryiconview.h"
+#include "constants.h"
 #include "config/tellico_config.h"
 
 #include <KLocalizedString>
@@ -38,10 +39,6 @@
 #include <QButtonGroup>
 
 namespace {
-  static const int MIN_ENTRY_ICON_SIZE = 64;
-  static const int MAX_ENTRY_ICON_SIZE = 512;
-  static const int SMALL_INCREMENT_ICON_SIZE = 1;
-  static const int LARGE_INCREMENT_ICON_SIZE = 8;
 }
 
 using Tellico::ViewStack;
