@@ -1,3 +1,7 @@
+2024-10-24  Robby Stephenson  <robby@periapsis.org>
+
+	* Improved image loading to be only on need.
+
 2024-10-21  Robby Stephenson  <robby@periapsis.org>
 
 	* Added property to disable line feed replacement in Paragraph fields.
